--- a/contacts/cloudbuild.main.yaml
+++ b/contacts/cloudbuild.main.yaml
@@ -39,34 +39,34 @@ steps:
     args:
       - 'build'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA'
+      - 'gcr.io/$PROJECT_ID/contacts:$SHORT_SHA'
       - '--build-arg'
       - 'PROJECT_ID=$PROJECT_ID'
       - '.'
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA']
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
-    args:
-      - 'run'
-      - 'services'
-      - 'update'
-      - '$REPO_NAME'
-      - '--image'
-      - 'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA'
-      - '--region'
-      - 'us-central1'
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
-    args:
-      - 'run'
-      - 'services'
-      - 'update'
-      - '$REPO_NAME-jobs'
-      - '--image'
-      - 'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA'
-      - '--region'
-      - 'us-central1'
+    args: ['push', 'gcr.io/$PROJECT_ID/contacts:$SHORT_SHA']
+#   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+#     entrypoint: gcloud
+#     args:
+#       - 'run'
+#       - 'services'
+#       - 'update'
+#       - 'contacts'
+#       - '--image'
+#       - 'gcr.io/$PROJECT_ID/contacts:$SHORT_SHA'
+#       - '--region'
+#       - 'us-central1'
+#   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+#     entrypoint: gcloud
+#     args:
+#       - 'run'
+#       - 'services'
+#       - 'update'
+#       - 'contacts-jobs'
+#       - '--image'
+#       - 'gcr.io/$PROJECT_ID/contacts:$SHORT_SHA'
+#       - '--region'
+#       - 'us-central1'
 timeout: 900s
 images:
   - gcr.io/$PROJECT_ID/contacts:$SHORT_SHA
